[gd_scene load_steps=6 format=2]

[ext_resource path="res://main/world/obstacle/platform/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/world/obstacle/platform/falling_platform/falling_plaform.png" type="Texture" id=2]
[ext_resource path="res://main/world/obstacle/platform/falling_platform/falling_platform.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 5.5 )

[sub_resource type="Animation" id=2]
resource_name = "rumble"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0 ), Vector2( 2, 2 ), Vector2( -1, -1 ), Vector2( -4, 0 ), Vector2( 2, 2 ), Vector2( -2, 2 ) ]
}

[node name="FallingPlatform" instance=ExtResource( 1 )]
script = ExtResource( 3 )
fall_time = 0.45
accel = 400

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="FallArea" type="Area2D" parent="." index="2"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea" index="0"]
position = Vector2( 0, -3.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
playback_speed = 4.0
anims/rumble = SubResource( 2 )

[node name="FallTimer" type="Timer" parent="." index="4"]
